[package]
name = "tago"
version = "0.1.1"
edition = "2021"
authors = ["Luke Xu <lukecxu@gmail.com>"]
description = "A CLI utility tool designed to manage and track saved timestamps"
readme = "README.md"
homepage = "https://github.com/Cairnify/tago"
repository = "https://github.com/Cairnify/tago"
license-file = "LICENSE.txt"
keywords = ["time", "timestamps", "tracking"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono-humanize = { version = "0.2.3" }
home = "0.5.3"
toml = "0.5"
